--- a/client/src/pages/Customer/AuthPage.css
+++ b/client/src/pages/Customer/AuthPage.css
@@ -20,6 +20,7 @@
     width:18em;
     margin-bottom: 20px;
 
+
   }
   .ahome{
     position:absolute;
@@ -108,38 +109,7 @@
     font-size: 14px;
   
   }
-  .google{
-    width: 21em;
-    height:3em;
-    border: 1px solid black;
-    position: relative;
-    bottom: 1em;
-    cursor: pointer;
-    left: 1.3em;
-    border-radius: 5px;
-  }
 
-  #gbutton{
-    position: absolute;
-    right: 0em;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 1.1em;
-    padding-left: 3em;
-    font-weight: bold;
-  }
-  .google img{
-    position: relative;
-    z-index: 2;
-    pointer-events: none;
-    padding-left: 3.9em;
-    padding-top: 0.6em;
-
-  }
   #or{
     position:relative;
     /* left: 10em; */
@@ -257,7 +227,10 @@
 .auth-container #lmsg:hover {
   color: #007BFF; /* Change to a highlight color on hover */
 }
-
+.google-btn{
+   display: grid;
+   place-content: center;
+}
   @media screen and (max-width:700px){
       /* .google{
           display:none;
@@ -293,14 +266,7 @@
       /* padding: 1em; */
       width: 100%;
     }
-    .google{
-      width:90%;
-      left: 0.5em;
-    }
-    #gimg{
-      position: relative;
-      right: 1em;
-    }
+  
     .forgotbox{
       width: 80%;
       left:2em;
