--- a/client/src/pages/Customer/Reviews.css
+++ b/client/src/pages/Customer/Reviews.css
@@ -268,6 +268,9 @@ button{
    .rname{
     font-size: 0.9em;
   }
+  .remail{
+    font-size: 0.8em!important;
+  }
 
 }
 @media screen and (max-width:430px) {
