--- a/client/src/pages/Customer/Reviews.css
+++ b/client/src/pages/Customer/Reviews.css
@@ -777,7 +777,7 @@ button:hover .button-icon {
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #f5f5f5;
+    background-color: #f11111;
     transition: all 0.3s ease;
     z-index: -1;
 }
@@ -788,7 +788,7 @@ button:hover .button-icon {
 
 .close:hover {
     border-color: #666;
-    color: #444;
+    color: #eb1010;
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
